--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<dependency>
+	<!--	<dependency>
    			<groupId>org.springframework.boot</groupId>
    			<artifactId>spring-boot-starter-data-jpa</artifactId> 
-		</dependency>
+		</dependency> -->
 
 		<!--https://mvnrepository.com/artifact/mysql/mysql-connector-java
        <dependency>
